--- a/style.css
+++ b/style.css
@@ -613,7 +613,7 @@
     border-color: #e96125;
     border-radius: 20px;
     /* padding: 3px 6px; */
-    height: 40px;
+/*     height: 40px; */
     width: 120px;
     background-color: #e96125;
     font-size: 16px;
@@ -624,7 +624,7 @@
     /* border-color: #e96125; */
     border-radius: 20px;
     /* padding: 3px 6px; */
-    height: 40px;
+/*     height: 40px; */
     width: 120px;
     /* background-color: #e96125; */
     font-size: 16px;
