--- a/style.css
+++ b/style.css
@@ -604,6 +604,7 @@
 .product-info .shop .btn{
     margin-right: 4%;
     text-align: center;
+    padding: 10px;
 }
 .product-info .shop .btn:hover{
     background-color: #247BA0;
